tests/reliability/reject/module_toplevel.keel
import "mods/bad_toplevel.keel"
def main(sys: System); Io:
    println(helper())
